SERVER-34215 Clear oplog truncate after point when clearing initial sync flag