src/mongo/db/repl/replication_consistency_markers_impl.cpp
@@ -162,6 +162,11 @@ void ReplicationConsistencyMarkersImpl::clearInitialSyncFlag(OperationContext* o
 
     _updateMinValidDocument(opCtx, update);
 
+    // Make sure to clear the oplogTrucateAfterPoint in case it is stale. Otherwise, we risk the
+    // possibility of deleting oplog entries that we want to keep. It is safe to clear this
+    // here since we are consistent at the top of our oplog at this point.
+    setOplogTruncateAfterPoint(opCtx, Timestamp());
+
     if (getGlobalServiceContext()->getStorageEngine()->isDurable()) {
         opCtx->recoveryUnit()->waitUntilDurable();
         replCoord->setMyLastDurableOpTime(time);
